<resources>
    <string name="app_name">EvaluacionContinua2</string>
    <string name="btnregistro">REGISTRO</string>
    <string name="btnformulario">FORMULARIO</string>
    <string name="btnlistado">LISTADO</string>

    <string name="valinformacion">INFORMACIÓN</string>
    <string name="valapp">AppIDAT</string>
    <string name="valnombre">Nombre</string>
    <string name="valapellido">Apellido</string>
    <string name="valdni">DNI</string>
    <string name="valcelular">Numero de Celular</string>
    <string name="valemail">E-mail</string>
    <string name="valcualidades">Seleccione sus Cualidades:</string>
    <string name="valpuntual">Puntual</string>
    <string name="valrespetuoso">Respetuoso</string>
    <string name="valresponsable">Responsable</string>
    <string name="valotracualidad">Ingrese otra Cualidad</string>
    <string name="valcarrera">Seleccione la carrera a Estudiar:</string>
    <string name="valingeneria">Ingenieria</string>
    <string name="valciencias">Ciencias Médicas</string>
    <string name="valadministracion">Administracion</string>
    <string name="valacceder">Acceder\n</string>
    <string name="errorcampos">Todos los campos tienen que ser completados!!</string>
    <string name="errorcualidad">Debe de seleccionar una cualidad</string>
    =======
    <string name="TítuloToolBar">AppIDAT</string>

    <string name="TituloCuestionario">CUESTIONARIO</string>
    <string name="sub1">1. Marque sus platos favoritos</string>
    <string name="valArrozPollo">Arroz con Pollo</string>
    <string name="vallomo">Lomo Saltado</string>
    <string name="valajigallina">Ají de Gallina</string>
    <string name="valtallarines">Tallarines</string>
    <string name="valarrozchaufa">Arroz Chaufa</string>
    <string name="valotros">Otros</string>
    <string name="sub2">2. ¿Visitaste algún país de Europa, Asia o Africa?</string>
    <string name="valsi">SI</string>
    <string name="valno">NO</string>
    <string name="sub3">3. ¿Hablas Inglés?</string>
    <string name="sub4">4. ¿Te Gusta la Tecnología?</string>
    <string name="sub5">4. ¿Realiza Trabajo Remoto?</string>
    <string name="valresolver">Resolver</string>
    =======
    <string name="errorvalidacion">Los campos deben estar completos</string>
    <string name="errorcarrera">Debe seleccionar una carrera</string>
    <string name="notificacion">Informacion Registrada con Exito!!</string>
    <string name="tvTituloTest">LISTA DE TEST PSICOLOGICO</string>
    <string name="rtvTituloTP">Titulo</string>
    <string name="rtvDescripcionTP">Descripcion</string>
    <string name="rtvFechaPublicacionTP">Fecha Publicacion</string>
    <string name="rtbListaTestPsicologico">LISTA DE TEST PSICOLOGICO</string>
    <string name="rtbListatestPsiologico">LISTA DE TESTS PSICOLOGICO</string>
    <string name="rtbTitutloListaTP">LISTA DE TESTS PSICOLOGICO</string>
    <string name="vallistainfo">LISTA DE INFORMACIÓN</string>
    <string name="vallistarinfo">Lista de Informacion</string>
    <string name="vallistaformulario">LISTA CUESTIONARIO</string>
    <string name="vallistarformulario">Listar Formulario</string>

</resources>