<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegistroActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_new_24"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/valapp"
            app:titleTextColor="@android:color/white"
            tools:ignore="MissingConstraints" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/valinformacion"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/edNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/valnombre"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edApellido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/valapellido"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/edNombre"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edDni"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="8"
            android:hint="@string/valdni"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/edApellido"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edCelular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="9"
            android:hint="@string/valcelular"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/edDni"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:hint="@string/valemail"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/edCelular"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valcualidades"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/edEmail" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <CheckBox
                android:id="@+id/cbpuntual"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/valpuntual"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/cbrespetuoso"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/valrespetuoso"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/cbresponsable"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/valresponsable"
                tools:ignore="TouchTargetSizeCheck" />

            <CheckBox
                android:id="@+id/cbotros"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/valotros"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edOtros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valotracualidad"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/valcarrera"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/rbingenieria"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="@string/valingeneria"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbciencias"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="@string/valciencias"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbadministracion"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="@string/valadministracion"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbotros"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:text="@string/valotros"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <Button
            android:id="@+id/btnAcceder"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/valacceder"
            app:icon="@drawable/baseline_check_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
        <Button
            android:id="@+id/btnlistainfo"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:text="@string/vallistarinfo"
            app:icon="@drawable/baseline_view_list_24"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/btnAcceder"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>